--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,8 +4,8 @@
     <header class="main-header-container">
         <div class="main-header container">
             <h1>
-                <a href="{% url 'home' %}"><i class="fa-solid fa-utensils"></i> 
-                    <span>Recipes</span>
+                <a class="main-logo" href="{% url 'home' %}"><i class="fa-solid fa-utensils main-logo-icon"></i>
+                    <span class="main-logo-text">Recipes</span>
                 </a>
             </h1>
         </div>
