--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -30,6 +30,7 @@
         }
 
         body {
+            background: var(--color-gray-1);
             font-size: 1.6rem;
             font-family: var(--font-primary);
         }
@@ -113,7 +114,46 @@
             margin-right: 1.5rem;
         }
 
+        .search-form {
+            border: .2rem solid var(--color-primary-dark);
+            max-width: 64rem;
+            margin: 0 auto;
+            border-radius: .4rem;
+            position: relative;
+            transition: all 300ms ease-in-out;
+        }
 
-        .main-logo-text {}
+        .search-input,
+        .search-button {
+            border: none;
+            background: none;
+            outline: none;
+            padding: 1rem;
+        }
+
+        .search-button {
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .search-button:focus {
+            outline: 1px solid var(--color-primary);
+            background: rgba(0, 0, 0, .1);
+        }
+
+        .search-input {
+            width: 100%;
+            padding-right: 2.5rem;
+        }
+
+        .search-form:focus-within {
+            border-color: var(--color-primary);
+            background: var(--color-white);
+        }
+
+        .search-form:focus-within .search-button {
+            color: var(--color-primary);
+        }
     </style>
 </head>
