Container and Grid content

--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -155,5 +155,22 @@
         .search-form:focus-within .search-button {
             color: var(--color-primary);
         }
+
+        .main-content-container {
+            margin-top: 1rem;
+            margin-left: 8rem;
+            margin-right: 8rem;
+            margin-bottom: 4rem;
+        }
+
+        .main-content {
+            padding-top: 0;
+        }
+
+        .main-content-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+            gap: var(--spacing-gutter-large);
+        }
     </style>
 </head>
