--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -2,14 +2,13 @@
 
 <body>
     {% include '../partials/header.html' %}
-    <div class="search-container">
-        <div class="container">
-            <form action="" class="search-form">
-                <input type="search" class="search-input" name="search">
-                <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
-            </form>
+    {% include '../partials/search-bar.html' %}
+
+    <main class="main-content-container">
+        <div class="main-content main-content-list container">
+
         </div>
-    </div>
+    </main>
 </body>
 
 </html>
