Prototyping the recipe card

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -6,7 +6,12 @@
 
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-
+            <div class="recipe recipe-list-item">
+                <div class="recipe-cover">
+                    <img src="https://placehold.jp/1280x720.png" alt="Temp">
+                </div>
+                <h1>Sexo</h1>
+            </div>
         </div>
     </main>
 </body>
