Adding the card recipes and the footer

--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,19 +1,17 @@
 {% include '../partials/head.html' %}
 
 <body>
+    <!-- Including the header -->
     {% include '../partials/header.html' %}
+
+    <!-- Including the search-bar form -->
     {% include '../partials/search-bar.html' %}
 
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
-            <div class="recipe recipe-list-item">
-                <div class="recipe-cover">
-                    <img src="https://placehold.jp/1280x720.png" alt="Temp">
-                </div>
-                <h1>Sexo</h1>
-            </div>
-        </div>
-    </main>
+    <!-- Including the Recipe Cards -->
+    {% include '../partials/recipe-cards.html' %}
+
+    <!-- Including the Footer -->
+    {% include '../partials/footer.html' %}
 </body>
 
 </html>
