--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -18,32 +18,6 @@
 
     <!-- CSS -->
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-
-        }
-
-        html {
-            font-size: 62.5%;
-        }
-
-        body {
-            background: var(--color-gray-1);
-            font-size: 1.6rem;
-            font-family: var(--font-primary);
-        }
-
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-            font-family: var(--font-headings);
-        }
-
         :root {
             --color-primary: #269fe6;
             --color-primary-hover: #2086c2;
@@ -86,6 +60,33 @@
 
             --spacing-gutter-medium: 3rem;
             --spacing-gutter-large: 4rem;
+        }
+
+        * {
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+
+        }
+
+        html {
+            font-size: 62.5%;
+        }
+
+        body {
+            background: var(--color-gray-1);
+            font-size: 1.6rem;
+            font-family: var(--font-primary);
+            color: var(--color-dark-text);
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
+            font-family: var(--font-headings);
         }
 
         .container {
@@ -175,10 +176,11 @@
 
         .recipe {
             background: var(--color-white);
-            box-shadow: -5px 5px 10px rgba(0, 0, 0, .5);
+            box-shadow: -5px 5px 10px rgba(0, 0, 0, .4);
             transform: scale(1);
             transition: all 250ms ease-in-out;
-
+            border-radius: 4px;
+            overflow: hidden;
         }
 
         .recipe img {
@@ -190,7 +192,90 @@
         }
 
         .recipe-list-item:hover {
-            transform: scale(1.025);
+            transform: scale(1.02);
+            box-shadow: -8px 8px 18px rgba(0, 0, 0, .5);
+        }
+
+        .recipe-title-container {
+            padding: var(--spacing-gutter-medium);
+            padding-bottom: 2rem;
+
+        }
+
+        .recipe-author {
+            padding: 0 var(--spacing-gutter-medium);
+        }
+
+        .recipe-author a {
+            color: var(--color-primary);
+            transition: all 300ms ease-in-out;
+            text-decoration: none;
+        }
+
+        .recipe-author a:hover {
+            color: var(--color-primary-dark);
+        }
+
+        .recipe-author-item {
+            color: var(--color-gray-4);
+            margin-right: 1rem;
+        }
+
+        .recipe-content {
+            padding: var(--spacing-gutter-medium);
+            padding-top: 2rem;
+        }
+
+        .recipe-meta-container {
+            display: flex;
+            flex-flow: row wrap;
+            padding: var(--spacing-gutter-medium);
+        }
+
+        .recipe-meta {
+            display: flex;
+            flex-flow: column nowrap;
+            flex-shrink: 1;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .recipe-meta-title {
+            font-size: 1.6rem;
+        }
+
+        .recipe-footer a {
+            background: var(--color-primary-dark);
+            display: block;
+            color: var(--color-white);
+            text-decoration: none;
+            text-align: center;
+            padding: 2rem var(--spacing-gutter-medium);
+            transition: all 300ms ease-in-out;
+        }
+
+        .recipe-footer a:hover {
+            filter: brightness(2);
+        }
+
+        .main-footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: var(--color-primary-dark);
+            color: var(--color-white);
+            padding: var(--spacing-gutter-medium);
+        }
+
+        .main-footer a {
+            color: var(--color-white);
+            text-decoration: none;
+
+        }
+
+        .main-footer a:hover {
+            filter: brightness(.8);
+            transition: all 300ms ease-in-out;
         }
     </style>
 </head>
