--- a/recipes/templates/recipes/partials/footer.html
+++ b/recipes/templates/recipes/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
     <div class="developer">
-        <a href="https://www.otaviomiranda.com.br/" target="_blank" rel="noreferrer noopener">By Davi Souza</a>
+        <a href="https://github.com/dev-davisouza" target="_blank" rel="noreferrer noopener">By Davi Souza</a>
     </div>
 
     <div class="powered">
