--- a/recipes/templates/recipes/partials/recipe-cards.html
+++ b/recipes/templates/recipes/partials/recipe-cards.html
@@ -1,154 +1,50 @@
-<main class="main-content-container">
-    <div class="main-content main-content-list container">
-        <div class="recipe recipe-list-item">
-            <div class="recipe-cover">
-                <img src="https://placehold.jp/1280x720.png" alt="Temp">
-            </div>
-            <div class="recipe-title-container">
-                <h2 class="recipe-title">
-                    Lorem ipsum dolor sit amet.
-                </h2>
-            </div>
-            <div class="recipe-author">
-                <span class="recipe-author-item">
-                    <i class="fas fa-user"></i>
-                    Davi Souza
-                </span>
-                <span class="recipe-author-item">
-                    <i class="fas fa-calendar-alt"></i>
-                    29/06/2023 às 09:19
-                </span>
-                <span class="recipe-author-item">
-                    <i class="fas fa-layer-group"></i>
-                    <span> <a href="">Café da manhã</a> </span>
-                </span>
-            </div>
-            <div class="recipe-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, tenetur! Fugit ipsum quis esse
-                    reiciendis eligendi quae magnam veniam quisquam.</p>
-            </div>
+<div class="recipe recipe-list-item">
+    <div class="recipe-cover">
+        <img src="https://placehold.jp/1280x720.png" alt="Temp">
+    </div>
+    <div class="recipe-title-container">
+        <h2 class="recipe-title">
+            Lorem ipsum dolor sit amet.
+        </h2>
+    </div>
+    <div class="recipe-author">
+        <span class="recipe-author-item">
+            <i class="fas fa-user"></i>
+            Davi Souza
+        </span>
+        <span class="recipe-author-item">
+            <i class="fas fa-calendar-alt"></i>
+            29/06/2023 às 09:19
+        </span>
+        <span class="recipe-author-item">
+            <i class="fas fa-layer-group"></i>
+            <span> <a href="">Café da manhã</a> </span>
+        </span>
+    </div>
+    <div class="recipe-content">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, tenetur! Fugit ipsum quis esse
+            reiciendis eligendi quae magnam veniam quisquam.</p>
+    </div>
 
-            <div class="recipe-meta-container">
-                <div class="recipe-meta recipe-preparation">
-                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
-                    <div class="recipe-meta-text">
-                        0 Minutos
-                    </div>
-                </div>
-                <div class="recipe-meta recipe-servings">
-                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
-                    <div class="recipe-meta-text">
-                        0 Porções
-                    </div>
-                </div>
+    <div class="recipe-meta-container">
+        <div class="recipe-meta recipe-preparation">
+            <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
+            <div class="recipe-meta-text">
+                0 Minutos
             </div>
-
-            <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="#">
-                    <i class="fas fa-eye"></i>
-                    <span>ver mais...</span>
-                </a>
-            </footer>
         </div>
-        <div class="recipe recipe-list-item">
-            <div class="recipe-cover">
-                <img src="https://placehold.jp/1280x720.png" alt="Temp">
+        <div class="recipe-meta recipe-servings">
+            <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
+            <div class="recipe-meta-text">
+                0 Porções
             </div>
-            <div class="recipe-title-container">
-                <h2 class="recipe-title">
-                    Lorem ipsum dolor sit amet.
-                </h2>
-            </div>
-            <div class="recipe-author">
-                <span class="recipe-author-item">
-                    <i class="fas fa-user"></i>
-                    Davi Souza
-                </span>
-                <span class="recipe-author-item">
-                    <i class="fas fa-calendar-alt"></i>
-                    29/06/2023 às 09:19
-                </span>
-                <span class="recipe-author-item">
-                    <i class="fas fa-layer-group"></i>
-                    <span> <a href="">Café da manhã</a> </span>
-                </span>
-            </div>
-            <div class="recipe-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, tenetur! Fugit ipsum quis esse
-                    reiciendis eligendi quae magnam veniam quisquam.</p>
-            </div>
-
-            <div class="recipe-meta-container">
-                <div class="recipe-meta recipe-preparation">
-                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
-                    <div class="recipe-meta-text">
-                        0 Minutos
-                    </div>
-                </div>
-                <div class="recipe-meta recipe-servings">
-                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
-                    <div class="recipe-meta-text">
-                        0 Porções
-                    </div>
-                </div>
-            </div>
-
-            <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="#">
-                    <i class="fas fa-eye"></i>
-                    <span>ver mais...</span>
-                </a>
-            </footer>
-        </div>
-        <div class="recipe recipe-list-item">
-            <div class="recipe-cover">
-                <img src="https://placehold.jp/1280x720.png" alt="Temp">
-            </div>
-            <div class="recipe-title-container">
-                <h2 class="recipe-title">
-                    Lorem ipsum dolor sit amet.
-                </h2>
-            </div>
-            <div class="recipe-author">
-                <span class="recipe-author-item">
-                    <i class="fas fa-user"></i>
-                    Davi Souza
-                </span>
-                <span class="recipe-author-item">
-                    <i class="fas fa-calendar-alt"></i>
-                    29/06/2023 às 09:19
-                </span>
-                <span class="recipe-author-item">
-                    <i class="fas fa-layer-group"></i>
-                    <span> <a href="">Café da manhã</a> </span>
-                </span>
-            </div>
-            <div class="recipe-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, tenetur! Fugit ipsum quis esse
-                    reiciendis eligendi quae magnam veniam quisquam.</p>
-            </div>
-
-            <div class="recipe-meta-container">
-                <div class="recipe-meta recipe-preparation">
-                    <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i> Preparo</h3>
-                    <div class="recipe-meta-text">
-                        0 Minutos
-                    </div>
-                </div>
-                <div class="recipe-meta recipe-servings">
-                    <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
-                    <div class="recipe-meta-text">
-                        0 Porções
-                    </div>
-                </div>
-            </div>
-
-            <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="#">
-                    <i class="fas fa-eye"></i>
-                    <span>ver mais...</span>
-                </a>
-            </footer>
         </div>
     </div>
-</main>
+
+    <footer class="recipe-footer">
+        <a class="recipe-read-more button button-dark button-full-width" href="">
+            <i class="fas fa-eye"></i>
+            <span>ver mais...</span>
+        </a>
+    </footer>
+</div>
