--- a/recipes/templates/recipes/partials/recipe-cards.html
+++ b/recipes/templates/recipes/partials/recipe-cards.html
@@ -25,10 +25,12 @@
             <i class="fas fa-calendar-alt"></i>
             {{recipe.created_at|date:"d/m/Y"}} às {{recipe.created_at|date:"H:i"}}
         </span>
-        <span class="recipe-author-item">
-            <i class="fas fa-layer-group"></i>
-            <span> <a href="{% url 'recipes:category' recipe.category.id %}"> {{recipe.category.name}} </a> </span>
-        </span>
+        {% if recipe.category is not None %}
+            <span class="recipe-author-item">
+                <i class="fas fa-layer-group"></i>
+                <span> <a href="{% url 'recipes:category' recipe.category.id %}"> {{recipe.category.name}} </a> </span>
+            </span>
+        {% endif %}
     </div>
     <div class="recipe-content">
         <p> {{recipe.description}} </p>
