Category filter not found pagr

--- a/recipes/templates/recipes/pages/category.html
+++ b/recipes/templates/recipes/pages/category.html
@@ -1,6 +1,6 @@
 {% extends 'global/base.html' %}
 
-{% block title %}Category | {% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block content %}
     <div class="main-content main-content-list container">
@@ -8,4 +8,4 @@
             {% include '../partials/recipe-cards.html' %}
         {% endfor %}
     </div>
-{% endblock content %}
+{% endblock content %} 
