--- a/recipes/templates/recipes/partials/recipe-cards.html
+++ b/recipes/templates/recipes/partials/recipe-cards.html
@@ -14,12 +14,16 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            {% if recipe.author.first_name %}
-                {{recipe.author.first_name}} {{recipe.author.last_name}}
-                    
-            {% else %}
-                {{recipe.author.username}}
-            {% endif %}
+                {% if recipe.author is not None %}
+                    {% if recipe.author.first_name %}
+                        {{recipe.author.first_name}} {{recipe.author.last_name}}
+                    {% else %}
+                        {{recipe.author.username}}
+                    {% endif %}
+                
+                {% else %}
+                    <em>Desconhecido</em> 
+                {% endif %}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
