Changing the title page in recipe view

--- a/recipes/templates/recipes/pages/recipe.html
+++ b/recipes/templates/recipes/pages/recipe.html
@@ -1,5 +1,5 @@
 {% extends 'global/base.html' %}
-{% block title %}Recipe | {% endblock  %}
+{% block title %} {{title}} {% endblock  %}
 {% block content %}
     <div class="main-content main-content-detail container">
         {% include '../partials/recipe-cards.html' %}
