FIlter for HTML preparation steps field

--- a/recipes/templates/recipes/partials/recipe-cards.html
+++ b/recipes/templates/recipes/partials/recipe-cards.html
@@ -64,7 +64,11 @@
     {% endif %}
     {% if is_detail_page %}
         <div class="preparation-steps">
-            {{recipe.preparation_steps}}
+            {% if recipe.preparation_steps_is_html %}
+                {{recipe.preparation_steps|safe}}
+            {% else %}
+                {{recipe.preparation_steps}}
+            {% endif %}
         </div>
     {% endif %}
 </div>
