some changes in the footer and the 404error page

--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -255,6 +255,8 @@ h6 {
     background: var(--color-primary-dark);
     color: var(--color-white);
     padding: var(--spacing-gutter-medium);
+    bottom: 0;
+    width: 100%;
 }
 
 .main-footer a {
