--- a/recipes/templates/recipes/pages/404_error.html
+++ b/recipes/templates/recipes/pages/404_error.html
@@ -1,6 +1,6 @@
 {% extends 'global/base.html' %}
 
-{% block title %}404 Not Found{% endblock %}
+{% block title %}404 Not Found | {% endblock %}
 
 {% block content %}
     <div class="main-content main-content-list container">
