creating the not found recipes page

--- a/recipes/templates/recipes/pages/404_error.html
+++ b/recipes/templates/recipes/pages/404_error.html
@@ -4,6 +4,6 @@
 
 {% block content %}
     <div class="main-content main-content-list container">
-        <h1>Error 404 Not Found</h1>
+        <center><h1>Error 404 Not Found</h1></center>
     </div>
 {% endblock content %} 
