--- a/recipes/static/recipes/css/styles.css
+++ b/recipes/static/recipes/css/styles.css
@@ -322,6 +322,12 @@ h6 {
 }
 
 /* Messages */
+.messages-container {
+    display: flex;
+    flex-flow: column nowrap;
+    gap: calc(var(--spacing-gutter-medium) / 2);
+}
+
 .message {
   padding: 1rem;
   border-radius: 4px;
@@ -364,4 +370,10 @@ h6 {
   border: 1px solid var(--color-debug-dark);
   background: var(--color-debug-light);
   color: var(--color-debug-dark);
+}
+
+@media (max-width: 600px) {
+    .main-content-list {
+      grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+    }
 }
