--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,13 +3,7 @@
 {% block title %}Home | {% endblock %}
 
 {% block content %}
-    {% if messages %}
-        <div class="main-content container">
-            {% for message in messages %}
-                <center>{{ message }}</center>
-            {% endfor %}
-        </div>
-    {% endif %}
+    {% include 'recipes/partials/messages.html' %}
 
     <div class="main-content main-content-list container">
         {% for recipe in recipes %}
