Adding the validantion to up data to the database

--- a/authors/templates/authors/pages/add-user.html
+++ b/authors/templates/authors/pages/add-user.html
@@ -5,6 +5,8 @@
     <center><h2>Register</h2></center>
   </div>
 
+  {% include 'recipes/partials/messages.html' %}
+
   <div class="main-content container">
     <form action="{% url 'authors:treat' %}" method="POST">
       {% csrf_token %}
