Organizing the files

--- a/authors/templates/authors/pages/add-user.html
+++ b/authors/templates/authors/pages/add-user.html
@@ -15,31 +15,7 @@
     <center><h2>Register</h2></center>
   </div>
 
-  {% include 'recipes/partials/messages.html' %}
+  {% include 'global/partials/messages.html' %}
 
-  <div class="main-content container">
-    <form action="{% url 'authors:treat' %}" method="POST">
-      {% csrf_token %}
-
-      <div class="form-content form-content-grid">
-        {% for field in form %}
-          <div class="form-group">
-            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-            {{field}}
-
-            {% if field.help_text %}
-              <p class="help-text">{{ field.help_text }}</p>
-            {% endif %}
-
-            {{ field.errors }}
-          </div>
-        {% endfor %}
-      </div>
-      <div class="form-content form-content-grid">
-        <div class="form-group">
-          <button type="submit">Send</button>
-        </div>
-      </div>
-    </form>
-  </div>
+  {% include "global/pages/form.html" %}
 {% endblock content %}
