login e logout system

--- a/authors/templates/authors/pages/add-user.html
+++ b/authors/templates/authors/pages/add-user.html
@@ -11,7 +11,7 @@
     }
   </script>
   
-  <center><h2>Register</h2></center>
+  <center><h2>Register</h2></center><br><br>
   
   {% include 'global/partials/messages.html' %}
 
