--- a/static/global/css/styles.css
+++ b/static/global/css/styles.css
@@ -361,6 +361,20 @@ h6 {
     color: var(--color-white);
 }
 
+.inline-form {
+    display: inline;
+  }
+  
+  .plaintext-button {
+    display: inline;
+    border: none;
+    background: none;
+    cursor: pointer;
+    color: var(--color-primary);
+    font-size: 1.6rem;
+  }
+  
+
 /* Messages */
 .messages-container {
     display: flex;
