--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -12,19 +12,8 @@
   </script>
   
   <center><h2>Login</h2></center><br><br>
-  {% if request.user.is_authenticated %}
-  <div>
-    You are logged in with 
-    {{ request.user.username }}.
-    Please, 
-    <form class="inline-form" action="{% url 'authors:logout' %}" method='POST'>
-      {% csrf_token %}
-      <input type="hidden" name="username" value="{{ request.user.username }}">
-      <button class="plaintext-button" type="submit">click here</button>
-    </form> to logout.
-  </div>
-  {% endif %}
   
+  {% include 'authors/partials/login_message.html' %}
   {% include 'global/partials/messages.html' %}
 
   <form action="{% url 'authors:treat-login' %}" method="POST">
