--- a/static/global/css/styles.css
+++ b/static/global/css/styles.css
@@ -426,6 +426,10 @@ h6 {
   color: var(--color-debug-dark);
 }
 
+.login-message {
+    margin: 1rem 0;
+}  
+
 .close-message {
     background-color: transparent;
     color:#000;
