--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     {% include 'global/partials/messages.html' %}
+    {% include "authors/partials/login_message.html" %}
     <!-- Script for the close Button of flash message --> 
     <script>
         function closeMessage(button) {
