--- a/recipes/templates/recipes/partials/recipe-cards.html
+++ b/recipes/templates/recipes/partials/recipe-cards.html
@@ -1,9 +1,9 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
         {% if recipe.cover %}
-            <a href="{% url 'recipes:recipe' recipe.slug %}">
-                <img src="{{recipe.cover.url}}" alt="Temp">
-            </a>
+        <a href="{% url 'recipes:recipe' recipe.slug %}">
+            <img src="{{recipe.cover.url}}" alt="Temp">
+        </a>
         {% endif %}
     </div>
     <div class="recipe-title-container">
@@ -16,26 +16,26 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-                {% if recipe.author is not None %}
-                    {% if recipe.author.first_name %}
-                        {{recipe.author.first_name}} {{recipe.author.last_name}}
-                    {% else %}
-                        {{recipe.author.username}}
-                    {% endif %}
-                
-                {% else %}
-                    <em>Desconhecido</em> 
-                {% endif %}
+            {% if recipe.author is not None %}
+            {% if recipe.author.first_name %}
+            {{recipe.author.first_name}} {{recipe.author.last_name}}
+            {% else %}
+            {{recipe.author.username}}
+            {% endif %}
+
+            {% else %}
+            <em>Desconhecido</em>
+            {% endif %}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{recipe.created_at|date:"d/m/Y"}} às {{recipe.created_at|date:"H:i"}}
         </span>
         {% if recipe.category is not None %}
-            <span class="recipe-author-item">
-                <i class="fas fa-layer-group"></i>
-                <span> <a href="{% url 'recipes:category' recipe.category.id %}"> {{recipe.category.name}} </a> </span>
-            </span>
+        <span class="recipe-author-item">
+            <i class="fas fa-layer-group"></i>
+            <span> <a href="{% url 'recipes:category' recipe.category.id %}"> {{recipe.category.name}} </a> </span>
+        </span>
         {% endif %}
     </div>
     <div class="recipe-content">
@@ -52,25 +52,35 @@
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"></i> Porções</h3>
             <div class="recipe-meta-text">
-                {{recipe.servings}} {{recipe.preparation_servings_unit}}
+                {{recipe.servings}} {{recipe.servings_unit}}
             </div>
         </div>
     </div>
     {% if not is_detail_page %}
-        <footer class="recipe-footer">
-            <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.slug%}">
-                <i class="fas fa-eye"></i>
-                <span>ver mais...</span>
-            </a>
-        </footer>
+    <footer class="recipe-footer">
+        <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.slug%}">
+            <i class="fas fa-eye"></i>
+            <span>ver mais...</span>
+        </a>
+    </footer>
     {% endif %}
     {% if is_detail_page %}
-        <div class="preparation-steps">
-            {% if recipe.preparation_steps_is_html %}
-                {{recipe.preparation_steps|safe}}
-            {% else %}
-                {{recipe.preparation_steps}}
-            {% endif %}
-        </div>
+    <div class="preparation-steps">
+        {% if recipe.preparation_steps_is_html %}
+        {{recipe.preparation_steps|safe}}
+        {% else %}
+        {{recipe.preparation_steps}}
+        {% endif %}
+    </div>
+    {% if recipe.author == user.profile and recipe.is_published == False%}
+    <div class="recipe-meta-container">
+        <button class="edit-button">
+            <a href="{% url 'authors:edit_recipe' recipe.id %}">Edit recipe</a>
+        </button>
+        <button class="exclude-button">
+            <a href="">Exclude recipe</a>
+        </button>
+    </div>
+    {% endif %}
     {% endif %}
 </div>
