--- a/static/global/css/styles.css
+++ b/static/global/css/styles.css
@@ -70,6 +70,10 @@ h6 {
     font-family: var(--font-headings);
 }
 
+img {
+    max-width: 100%;
+  }
+
 .container {
     max-width: 144rem;
     margin: 0 auto;
@@ -342,7 +346,9 @@ h6 {
     color: var(--color-error-dark);
 }
 
-.form-content input {
+.form-content input,
+.form-content textarea,
+.form-content select {
     width: 100%;
     padding: 1rem;
     border-radius: 0.4rem;
@@ -364,17 +370,20 @@ h6 {
 
 .inline-form {
     display: inline;
-  }
+}
   
-  .plaintext-button {
+.span-2 {
+grid-column: span 2;
+}  
+
+.plaintext-button {
     display: inline;
     border: none;
     background: none;
     cursor: pointer;
     color: var(--color-primary);
     font-size: 1.6rem;
-  }
-  
+}
 
 /* Messages */
 .messages-container {
@@ -427,9 +436,37 @@ h6 {
   color: var(--color-debug-dark);
 }
 
+/* Authors */
 .login-message {
     margin: 1rem 0;
 }  
+
+.authors-dashboard-container {
+    max-width: 64rem;
+    text-align: left;
+    padding: var(--spacing-gutter-medium);
+    margin: 0 auto;
+}
+
+.authors-dashboard-container h3,
+.authors-dashboard-container p,
+.authors-dashboard-container ul {
+list-style-type: none;
+margin: 1rem 0;
+}
+
+/* Generics */
+.center {
+text-align: center;
+}
+
+.left {
+text-align: left;
+}
+
+.m-x {
+margin: 0 var(--spacing-gutter-medium);
+}
 
 .close-message {
     background-color: transparent;
