--- a/authors/templates/authors/pages/author_recipe.html
+++ b/authors/templates/authors/pages/author_recipe.html
@@ -17,7 +17,13 @@
 
     <h2>Dashboard ({{ user }})</h2>
     <br><br>{% include 'authors/partials/login_message.html' %}<br><br>
-    <form class="main-form" action="{% url "authors:treat_create_recipe" %}" method="POST" enctype="multipart/form-data">
+    <form class="main-form" 
+    {% if create_recipe_form_action %}
+      action="{% url 'authors:treat_create_recipe' %}" 
+    {% else %}
+      action="."
+    {% endif %}
+    method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <div class="left">
         <div class="form-content form-content-grid">
@@ -30,6 +36,7 @@
               <img src="{{ field.value.url }}" alt="Capa para {{ recipe.title }}">
             </div>
           {% endif %}
+          {{ field.errors }}
         </div>
       </div>
     </form>
