--- a/recipes/templates/recipes/partials/recipe-cards.html
+++ b/recipes/templates/recipes/partials/recipe-cards.html
@@ -34,7 +34,7 @@
         {% if recipe.category is not None %}
         <span class="recipe-author-item">
             <i class="fas fa-layer-group"></i>
-            <span> <a href="{% url 'recipes:category' recipe.category.id %}"> {{recipe.category.name}} </a> </span>
+            <span> <a href="{% url 'recipes:category' recipe.category.name %}"> {{recipe.category.name}} </a> </span>
         </span>
         {% endif %}
     </div>
