--- a/static/global/css/styles.css
+++ b/static/global/css/styles.css
@@ -74,6 +74,64 @@ img {
     max-width: 100%;
   }
 
+
+nav {
+    background-color: var(--color-primary);
+    padding: 1rem;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 1rem;
+    position: relative;
+}
+
+nav ul li a {
+    color: var(--color-white);
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+    display: block;
+}
+
+nav ul li:hover {
+    background-color: var(--color-primary-hover);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--color-gray-0);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: var(--color-dark-text);
+    padding: 12px 16px;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-divider {
+    margin: 0.5rem 0; /* Espaçamento em cima e embaixo da linha */
+    border-top: 1px solid var(--color-gray-3); /* Cor e estilo da linha */
+}
+
+.dropdown-content a:hover {
+    background-color: var(--color-gray-1);
+}
+
+nav ul li:hover .dropdown-content {
+    display: block;
+}
+
 .container {
     max-width: 144rem;
     margin: 0 auto;
