--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -29,5 +29,9 @@
       </div>
     </div>
   </form>
+  <div class="left">
+    <p>Não possui conta? <a href="{% url "authors:add_user" %}">Registre-se!</a></p>
+  </div>
+  
 </div>
 {% endblock content %}
